@@ -1,8 +1,5 @@
 Bugs:
 
-- miau with nick "foo", someone else with "foo_". kicking "foo_" makes miau
-  think "foo" was kicked. server.c:1062
-
 - If server changes user's nick, miau doesn't try to get it back!?
 
 - Wildcard '*' matches one or more character, not any number as it's supposed
